--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
   "dependencies": {
     "@docusaurus/core": "2.0.1",
     "@docusaurus/preset-classic": "2.0.1",
+    "@docusaurus/remark-plugin-npm2yarn": "^2.0.1",
+    "@docusaurus/theme-live-codeblock": "^2.0.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "docusaurus-plugin-sass": "^0.2.2",
+    "dotenv": "^16.0.1",
     "prism-react-renderer": "^1.3.5",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.54.4",
+    "wow.js": "^1.2.2"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1"
