--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,4 +1,4 @@
 Rabbit:
-  name: Lacorda
-  url: https://github.ic/Lacorda
+  name: lacorda
+  url: https://github.ic/lacorda
   image_url: https://avatars.githubusercontent.com/u/15226084?v=4
