--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "matter:docs": "node utils/editFrontmatter.js docs",
+    "matter:topic": "node utils/editFrontmatter.js topic",
+    "matter:blog": "node utils/editFrontmatter.js blog"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.1",
@@ -30,7 +33,10 @@
     "wow.js": "^1.2.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.1"
+    "@docusaurus/module-type-aliases": "2.0.1",
+    "inquirer": "^7.1.0",
+    "json2yaml": "^1.1.0",
+    "yamljs": "^0.3.0"
   },
   "browserslist": {
     "production": [
