--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "matter:docs": "node utils/editFrontmatter.js docs",
     "matter:topic": "node utils/editFrontmatter.js topic",
-    "matter:blog": "node utils/editFrontmatter.js blog"
+    "matter:blog": "node utils/editFrontmatter.js blog",
+    "matter:someerror": "node utils/editFrontmatter.js someerror"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.1",
