--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "matter:docs": "node utils/editFrontmatter.js docs",
-    "matter:topic": "node utils/editFrontmatter.js topic",
-    "matter:blog": "node utils/editFrontmatter.js blog",
-    "matter:someerror": "node utils/editFrontmatter.js someerror",
-    "matter": "npm run matter:docs && npm run matter:topic && npm run matter:blog && npm run matter:someerror"
+    "matter:docs": "node utils/editFrontmatter.js 01.docs",
+    "matter:tips": "node utils/editFrontmatter.js 02.tips",
+    "matter:someerror": "node utils/editFrontmatter.js 03.someerror",
+    "matter:blog": "node utils/editFrontmatter.js 10.blog",
+    "matter": "npm run matter:docs && npm run matter:tips && npm run matter:blog && npm run matter:someerror"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.1",
