--- a/package.json
+++ b/package.json
@@ -31,11 +31,17 @@
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.54.4",
     "wow.js": "^1.2.2"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1",
+    "antd": "^4.24.1",
     "dangerously-set-html-content": "^1.0.9",
     "inquirer": "^7.1.0",
     "json2yaml": "^1.1.0",
