--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "dependencies": {
     "@docusaurus/core": "2.0.1",
     "@docusaurus/preset-classic": "2.0.1",
-    "@docusaurus/remark-plugin-npm2yarn": "^2.0.1",
-    "@docusaurus/theme-live-codeblock": "^2.0.1",
+    "@docusaurus/remark-plugin-npm2yarn": "2.0.1",
+    "@docusaurus/theme-live-codeblock": "2.0.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.2",
@@ -36,8 +36,7 @@
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
-    "sass": "^1.54.4",
-    "wow.js": "^1.2.2"
+    "sass": "^1.54.4"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1",
