--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.2",
     "dotenv": "^16.0.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "prism-react-renderer": "^1.3.5",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-monaco-editor": "^0.51.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-router-redux": "^5.0.0-alpha.8",
@@ -40,6 +42,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1",
+    "@uiw/react-monacoeditor": "^3.5.7",
     "antd": "^4.24.1",
     "dangerously-set-html-content": "^1.0.9",
     "inquirer": "^7.1.0",
