--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@docusaurus/remark-plugin-npm2yarn": "2.0.1",
     "@docusaurus/theme-live-codeblock": "2.0.1",
     "@mdx-js/react": "^1.6.22",
+    "@monaco-editor/react": "^4.4.6",
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.2",
     "dotenv": "^16.0.1",
@@ -42,7 +43,6 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1",
-    "@uiw/react-monacoeditor": "^3.5.7",
     "antd": "^4.24.1",
     "dangerously-set-html-content": "^1.0.9",
     "inquirer": "^7.1.0",
