--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "docusaurus-plugin-sass": "^0.2.2",
     "dotenv": "^16.0.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
+    "monaco-themes": "^0.4.3",
     "prism-react-renderer": "^1.3.5",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
