--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mdx-js/react": "^1.6.22",
     "@monaco-editor/react": "^4.4.6",
     "clsx": "^1.2.1",
+    "docusaurus-plugin-less": "^2.0.2",
     "docusaurus-plugin-sass": "^0.2.2",
     "dotenv": "^16.0.1",
     "monaco-themes": "^0.4.3",
@@ -43,9 +44,12 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.1",
     "antd": "^4.24.1",
+    "babel-plugin-import": "^1.13.5",
     "dangerously-set-html-content": "^1.0.9",
     "inquirer": "^7.1.0",
     "json2yaml": "^1.1.0",
+    "less": "^4.1.3",
+    "less-loader": "^5.0.0",
     "yamljs": "^0.3.0"
   },
   "browserslist": {
