--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@docusaurus/theme-live-codeblock": "2.0.1",
     "@mdx-js/react": "^1.6.22",
     "@monaco-editor/react": "^4.4.6",
+    "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "docusaurus-plugin-less": "^2.0.2",
     "docusaurus-plugin-sass": "^0.2.2",
