--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "sass": "^1.54.4"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.1",
+    "@docusaurus/eslint-plugin": "^2.4.1",
+    "@docusaurus/module-type-aliases": "^2.0.1",
+    "@tsconfig/docusaurus": "^2.0.0",
     "antd": "^4.24.1",
     "babel-plugin-import": "^1.13.5",
     "dangerously-set-html-content": "^1.0.9",
@@ -52,6 +54,7 @@
     "json2yaml": "^1.1.0",
     "less": "^4.1.3",
     "less-loader": "^5.0.0",
+    "typescript": "^5.1.6",
     "yamljs": "^0.3.0"
   },
   "browserslist": {
