--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "matter:tips": "node utils/editFrontmatter.js 02.tips",
     "matter:third": "node utils/editFrontmatter.js 03.third",
     "matter:blog": "node utils/editFrontmatter.js 10.blog",
-    "matter": "npm run matter:docs && npm run matter:tips && npm run matter:blog && npm run matter:third"
+    "matter:interview": "node utils/editFrontmatter.js 99.interview",
+    "matter": "npm run matter:docs && npm run matter:tips && npm run matter:blog && npm run matter:third && npm run matter:interview"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.1",
