--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@docusaurus/core": "2.0.1",
     "@docusaurus/preset-classic": "2.0.1",
     "@docusaurus/remark-plugin-npm2yarn": "2.0.1",
+    "@docusaurus/theme-common": "2.0.1",
     "@docusaurus/theme-live-codeblock": "2.0.1",
     "@mdx-js/react": "^1.6.22",
     "@monaco-editor/react": "^4.4.6",
@@ -38,13 +39,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.3",
+    "react-router-dom": "^5.3.3",
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.54.4"
   },
   "devDependencies": {
+    "@ant-design/icons": "4",
     "@docusaurus/eslint-plugin": "^2.4.1",
     "@docusaurus/module-type-aliases": "^2.0.1",
     "@tsconfig/docusaurus": "^2.0.0",
