--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
+    "dev": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "USE_SSH=true docusaurus deploy",
@@ -26,7 +26,6 @@
     "@docusaurus/theme-common": "2.0.1",
     "@docusaurus/theme-live-codeblock": "2.0.1",
     "@mdx-js/react": "^1.6.22",
-    "@monaco-editor/react": "^4.4.6",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "docusaurus-plugin-less": "^2.0.2",
@@ -50,6 +49,7 @@
     "@docusaurus/eslint-plugin": "^2.4.1",
     "@docusaurus/module-type-aliases": "^2.0.1",
     "@tsconfig/docusaurus": "^2.0.0",
+    "@monaco-editor/react": "^4.4.6",
     "antd": "^4.24.1",
     "babel-plugin-import": "^1.13.5",
     "dangerously-set-html-content": "^1.0.9",
@@ -73,6 +73,7 @@
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=20",
+    "pnpm": ">=9.6.0"
   }
 }
