--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@docusaurus/theme-common": "2.0.1",
     "@docusaurus/theme-live-codeblock": "2.0.1",
     "@mdx-js/react": "^1.6.22",
+    "chalk": "^4.1.2",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "docusaurus-plugin-less": "^2.0.2",
     "docusaurus-plugin-sass": "^0.2.2",
     "dotenv": "^16.0.1",
+    "gray-matter": "^4.0.3",
     "monaco-editor": "^0.34.1",
     "monaco-themes": "^0.4.3",
     "prism-react-renderer": "^1.3.5",
@@ -48,8 +50,8 @@
     "@ant-design/icons": "4",
     "@docusaurus/eslint-plugin": "^2.4.1",
     "@docusaurus/module-type-aliases": "^2.0.1",
-    "@tsconfig/docusaurus": "^2.0.0",
     "@monaco-editor/react": "^4.4.6",
+    "@tsconfig/docusaurus": "^2.0.0",
     "antd": "^4.24.1",
     "babel-plugin-import": "^1.13.5",
     "dangerously-set-html-content": "^1.0.9",
