--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "chalk": "^4.1.2",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
-    "docusaurus-plugin-less": "^2.0.2",
     "docusaurus-plugin-sass": "^0.2.2",
     "dotenv": "^16.0.1",
     "gray-matter": "^4.0.3",
@@ -50,18 +49,16 @@
   },
   "devDependencies": {
     "@ant-design/icons": "4",
-    "@docusaurus/eslint-plugin": "^2.4.1",
-    "@docusaurus/module-type-aliases": "^2.0.1",
-    "@docusaurus/plugin-content-docs": "^2.0.1",
+    "@docusaurus/eslint-plugin": "2.0.1",
+    "@docusaurus/module-type-aliases": "2.0.1",
+    "@docusaurus/plugin-content-docs": "2.0.1",
     "@monaco-editor/react": "^4.4.6",
-    "@tsconfig/docusaurus": "^2.0.0",
+    "@tsconfig/docusaurus": "2.0.1",
     "antd": "^4.24.1",
     "babel-plugin-import": "^1.13.5",
     "dangerously-set-html-content": "^1.0.9",
     "inquirer": "^7.1.0",
     "json2yaml": "^1.1.0",
-    "less": "^4.1.3",
-    "less-loader": "^5.0.0",
     "typescript": "^5.1.6",
     "yamljs": "^0.3.0"
   },
